discussion/kv_engine/177109/177109_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52675: Add PagingVisitor benchmark

Add a benchmark for the PagingVisitor which measures how long
it takes to "visit" a vBucket. This measures how long it takes to
page out the required amount of items (memory) from the vBucket.
The benchmarks also logs the number of evicted items.

$ time ./ep_engine_benchmarks --benchmark_filter=PagingVisitor
2022-07-05T20:21:51+01:00
Running ./ep_engine_benchmarks
Run on (10 X 2400 MHz CPU s)
CPU Caches:
  L1 Data 64 KiB (x10)
  L1 Instruction 128 KiB (x10)
  L2 Unified 4096 KiB (x5)
Load Average: 2.80, 2.09, 1.96
----------------------------------------------------------------------------------------------------------------------
Benchmark                                                            Time             CPU   Iterations UserCounters...
----------------------------------------------------------------------------------------------------------------------
PagingVisitorBench/SingleVBucket/10/iterations:1/threads:1    13012959 ns     11900000 ns            1 Evicted=14.8k
PagingVisitorBench/SingleVBucket/64/iterations:1/threads:1    78508500 ns     78507000 ns            1 Evicted=106.026k
PagingVisitorBench/SingleVBucket/128/iterations:1/threads:1  184542084 ns    184542000 ns            1 Evicted=212.881k

real	2m38.014s
user	1m42.305s
sys	0m36.551s

Change-Id: I7c6d43f04c3af9765f5c044a24e21cb7fb46c52d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-07-05 19:40:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 22:15:57.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18724/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:30:13: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
            ASSERT_EQ(cb::engine_errc::success,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:41:13: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
            ASSERT_EQ(cb::engine_errc::success,
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/aligned_buffer.h:91:28: error: invalid application of "sizeof" to an incomplete type "cb::Semaphore" [clang-diagnostic-error]
    : std::aligned_storage<sizeof(_Tp), __alignof__(_Tp)>
                           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:538:35: note: in instantiation of template class "__gnu_cxx::__aligned_buffer<cb::Semaphore>" requested here
        __gnu_cxx::__aligned_buffer<_Tp> _M_storage;
                                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:599:13: note: in instantiation of member class "std::_Sp_counted_ptr_inplace<cb::Semaphore, std::allocator<cb::Semaphore>, __gnu_cxx::_S_atomic>::_Impl" requested here
      _Impl _M_impl;
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:679:13: note: in instantiation of template class "std::_Sp_counted_ptr_inplace<cb::Semaphore, std::allocator<cb::Semaphore>, __gnu_cxx::_S_atomic>" requested here
          typename _Sp_cp_type::__allocator_type __a2(__a._M_a);
                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:1371:14: note: in instantiation of function template specialization "std::__shared_count<__gnu_cxx::_S_atomic>::__shared_count<cb::Semaphore, std::allocator<cb::Semaphore>>" requested here
        : _M_ptr(), _M_refcount(_M_ptr, __tag, std::forward<_Args>(__args)...)
                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:408:4: note: in instantiation of function template specialization "std::__shared_ptr<cb::Semaphore, __gnu_cxx::_S_atomic>::__shared_ptr<std::allocator<cb::Semaphore>>" requested here
        : __shared_ptr<_Tp>(__tag, std::forward<_Args>(__args)...)
          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:859:14: note: in instantiation of function template specialization "std::shared_ptr<cb::Semaphore>::shared_ptr<std::allocator<cb::Semaphore>>" requested here
      return shared_ptr<_Tp>(_Sp_alloc_shared_tag<_Alloc>{__a},
             ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:875:19: note: in instantiation of function template specialization "std::allocate_shared<cb::Semaphore, std::allocator<cb::Semaphore>>" requested here
      return std::allocate_shared<_Tp>(std::allocator<_Tp_nc>(),
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:80:27: note: in instantiation of function template specialization "std::make_shared<cb::Semaphore>" requested here
    auto semaphore = std::make_shared<cb::Semaphore>();
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager.h:28:7: note: forward declaration of "cb::Semaphore"
class Semaphore;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/aligned_buffer.h:94:23: error: invalid application of "sizeof" to an incomplete type "cb::Semaphore" [clang-diagnostic-error]
        std::aligned_storage<sizeof(_Tp), __alignof__(_Tp)>::type _M_storage;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager.h:28:7: note: forward declaration of "cb::Semaphore"
class Semaphore;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18724/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:30:13:
error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18724/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17881/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47511/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39915/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8405/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29005/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20618/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19847/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21632/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20971/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
